--- a/src/components/layer/layer.less
+++ b/src/components/layer/layer.less
@@ -1,3 +1,5 @@
+@import "modal";
+
 .layer {
   width: 600px;
   height: 200px;
@@ -8,4 +10,5 @@
     height: 200px;
     background-color: red;
   }
+
 }
